# ChangeLog for app-cdr/brasero
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/brasero/ChangeLog,v 1.166 2014/11/13 10:45:26 pacho Exp $

  13 Nov 2014; Pacho Ramos <pacho@gentoo.org> -brasero-2.32.1-r1.ebuild,
  -files/brasero-2.32.0-build-plugins-against-local-library.patch,
  -files/brasero-2.32.1-fix-size.patch,
  -files/brasero-2.32.1-underlinking.patch,
  -files/brasero-2.32.1-useless-dialog.patch,
  -files/brasero-2.32.1-warning-silenced.patch,
  -files/brasero-2.32.1-warning-silenced2.patch:
  Drop old (#508854)

*brasero-3.11.4 (24 Sep 2014)

  24 Sep 2014; Pacho Ramos <pacho@gentoo.org> +brasero-3.11.4.ebuild,
  -brasero-3.10.0.ebuild:
  Version bump, drop old

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> brasero-3.11.3.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> brasero-3.11.3.ebuild:
  Stable for amd64, wrt bug #512912

  27 Jun 2014; Pacho Ramos <pacho@gentoo.org> brasero-3.11.3.ebuild,
  metadata.xml:
  Call configure at proper phase (#515426 by Patrick Lauer), fix homepage

*brasero-3.11.3 (27 Apr 2014)

  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> +brasero-3.11.3.ebuild,
  metadata.xml:
  Version bump for Gnome 3.12.

  23 Apr 2014; Pacho Ramos <pacho@gentoo.org> -brasero-3.8.0.ebuild,
  -files/brasero-3.8.0-tracker-detection.patch:
  Drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> brasero-3.10.0.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> brasero-3.10.0.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> brasero-3.10.0.ebuild:
  Fix wrong commit, bug 502160

*brasero-3.10.0 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +brasero-3.10.0.ebuild,
  -brasero-3.6.1.ebuild:
  Version bump for Gnome 3.10, drop old

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> brasero-3.8.0.ebuild:
  x86 stable, bug #478252
