@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare unpack
+DEPEND=>=dev-libs/glib-2.29.14:2 >=x11-libs/gtk+-3:3[introspection?] media-libs/gstreamer:1.0 media-libs/gst-plugins-base:1.0 >=dev-libs/libxml2-2.6:2 >=x11-libs/libnotify-0.6.1:= media-libs/libcanberra[gtk3] x11-libs/libICE x11-libs/libSM introspection? ( >=dev-libs/gobject-introspection-0.6.3 ) libburn? ( >=dev-libs/libburn-0.4:= >=dev-libs/libisofs-0.6.4:= ) nautilus? ( >=gnome-base/nautilus-2.91.90 ) playlist? ( >=dev-libs/totem-pl-parser-2.29.1:= ) tracker? ( >=app-misc/tracker-0.12:0= ) >=dev-util/intltool-0.50 >=dev-util/gtk-doc-am-1.12 sys-devel/gettext virtual/pkgconfig test? ( app-text/docbook-xml-dtd:4.3 ) app-arch/xz-utils >=sys-apps/sed-4
+DESCRIPTION=CD/DVD burning application for the GNOME desktop
+EAPI=5
+HOMEPAGE=https://wiki.gnome.org/Apps/Brasero
+IUSE=+css +introspection +libburn mp3 nautilus packagekit playlist test tracker
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2+ CC-BY-SA-3.0
+PDEPEND=gnome-base/gvfs
+RDEPEND=>=dev-libs/glib-2.29.14:2 >=x11-libs/gtk+-3:3[introspection?] media-libs/gstreamer:1.0 media-libs/gst-plugins-base:1.0 >=dev-libs/libxml2-2.6:2 >=x11-libs/libnotify-0.6.1:= media-libs/libcanberra[gtk3] x11-libs/libICE x11-libs/libSM introspection? ( >=dev-libs/gobject-introspection-0.6.3 ) libburn? ( >=dev-libs/libburn-0.4:= >=dev-libs/libisofs-0.6.4:= ) nautilus? ( >=gnome-base/nautilus-2.91.90 ) playlist? ( >=dev-libs/totem-pl-parser-2.29.1:= ) tracker? ( >=app-misc/tracker-0.12:0= ) media-libs/gst-plugins-good:1.0 media-plugins/gst-plugins-meta:1.0 x11-themes/hicolor-icon-theme css? ( media-libs/libdvdcss:1.2 ) !libburn? ( app-cdr/cdrdao app-cdr/dvd+rw-tools virtual/cdrtools ) mp3? ( media-libs/gst-plugins-ugly:1.0 media-plugins/gst-plugins-mad:1.0 ) packagekit? ( app-admin/packagekit-base )
+SLOT=0/3.1
+SRC_URI=mirror://gnome/sources/brasero/3.12/brasero-3.12.0.tar.xz
+_eclasses_=eutils	d6d771a6d82043f08b56b1ddebc16f78	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	9637c29fc715b17a6328f24251129557	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=23b2e8d05255c2adace8e0099eb3292b
